fix: adjusted dark mode button

--- a/currentVersion/darkmode.css
+++ b/currentVersion/darkmode.css
@@ -1,5 +1,14 @@
+[data-theme="dark"] {
+    --body-bg: #363636;
+    --header-bg: #121212;
+    --card-nt-th-td-footer-cc: white;
+    --card-th-td-bg: #484848; 
+}
+
+
 .dark-theme-body{
     background: #363636;
+    transition: all 0.4;
 }
 
 .dark-theme-header{
@@ -11,6 +20,7 @@
     color:white;
 }
 
+/*TABLE ==================================*/
 .dark-theme-nt {
     color:rgb(255, 255, 255);
 }
@@ -25,6 +35,66 @@
     color: white;
 }
 
+/*FOOTER ==================================*/
 .dark-theme-footer {
     color:white;
 }
+/*DARK MODE BUTTON ==================================*/
+ #switch-shadow{
+     width: 60px;
+     height: 30px;
+ }
+
+/*SWITCH ==================================*/
+.theme-switch-wrapper {
+    display: flex;
+    align-items: center;
+  }
+  .theme-switch {
+    display: inline-block;
+    height: 34px;
+    position: relative;
+    width: 60px;
+  }
+  
+  .theme-switch input {
+    display:none;
+  }
+  
+  .slider {
+    background-color: #ccc;
+    bottom: 0;
+    cursor: pointer;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    background-color: #fff;
+    bottom: 4px;
+    content: "";
+    height: 26px;
+    left: 4px;
+    position: absolute;
+    transition: .4s;
+    width: 26px;
+  }
+  
+  input:checked + .slider {
+    background-color: #66bb6a;
+  }
+  
+  input:checked + .slider:before {
+    transform: translateX(26px);
+  }
+  
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
